Update home.html with CSS stylesheet

--- a/home.html
+++ b/home.html
@@ -9,6 +9,9 @@ For now, the test suite only works in Chrome! Please read the README below in th
 - The freeCodeCamp Team 
 
 -->
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <main class="grid-wrapper" id="main">
   
   <header class="header" id="title">
